--- a/packages/climate/ac_automations.yaml
+++ b/packages/climate/ac_automations.yaml
@@ -94,7 +94,7 @@ script:
                   icon: ':thermometer:'
                   object: 'Aircon'
                   message: >
-                    script.log (ac_automations.yaml): ac: {{ state_attr(ac, 'friendly_name') }} fan_speed: {{ fan_speed }} ac_mode: {{ ac_mode }}
+                    {{ state_attr(ac, 'friendly_name') }} ac_mode: {{ ac_mode }}
               - service: climate.set_hvac_mode
                 target:
                   entity_id: "{{ ac }}"
@@ -102,15 +102,21 @@ script:
                   hvac_mode: "{{ ac_mode }}"
       # Wait a sec
       - delay: '00:00:01'
-      # Set fan speed
-      - service: script.log
-        data:
-          icon: ':thermometer:'
-          object: 'Aircon'
-          message: >
-            script.log (ac_automations.yaml): ac: {{ state_attr(ac, 'friendly_name') }} fan_speed: {{ fan_speed }}
-      - service: climate.set_fan_mode
-        data:
-          fan_mode: "{{ fan_speed }}"
-        target:
-          entity_id: "{{ ac }}"
+      # If AC not at same fan speed -set
+      - choose:
+          - conditions:
+              - condition: template
+                value_template: >
+                  {{ (state_attr(ac, 'fan_mode') != fan_speed) }}
+            sequence:
+              - service: script.log
+                data:
+                  icon: ':thermometer:'
+                  object: 'Aircon'
+                  message: >
+                    {{ state_attr(ac, 'friendly_name') }} fan_speed: {{ fan_speed }}
+              - service: climate.set_fan_mode
+                data:
+                  fan_mode: "{{ fan_speed }}"
+                target:
+                  entity_id: "{{ ac }}"
