--- a/packages/notifications/scripts.yaml
+++ b/packages/notifications/scripts.yaml
@@ -52,28 +52,53 @@ script:
   ######################################################################
   alert:
     sequence:
-      - service: notify.slack
-        data_template:
+      - variables:
           target: >
             {% if target is defined %}
               ["#{{ target }}"]
             {% else %}
               ["#alerts"]
             {% endif %}
+          icon: >
+            {% if icon is defined %}
+              {{ icon }}
+            {% else %}
+              :house:
+            {% endif %}
+          cam: >
+            {% if camera is defined %}
+              {{ camera }}
+            {% else %}
+              false
+            {% endif %}
+      - service: notify.slack
+        data_template:
+          target: "{{ target }}"
           message: '{{ message }}'
           data:
-            icon: >
-              {% if icon is defined %}
-                {{ icon }}
-              {% else %}
-                :house:
-              {% endif %}
+            icon: "{{ icon }}"
             username: '{{ object }}'
             blocks_template:
               - type: section
                 text:
                   type: mrkdwn
                   text: '{{ message }}'
+      - condition: template
+        value_template: >
+          {{ (cam != false) }}
+      - service: camera.snapshot
+        data_template:
+          entity_id: '{{ cam }}'
+          filename: "/config/www/cam_captures/script_log.jpg"
+      - delay: 
+          seconds: 2
+      - service: notify.slack
+        data_template:
+          target: "{{ target }}"
+          data:
+            file: 
+              path: "/config/www/cam_captures/script_log.jpg"
+              ### path is now required as of 0.113.0 see https://github.com/home-assistant/home-assistant.io/pull/13860/files
 
   ######################################################################
   # Re-usable script to send alert message
